--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: rde-mour <rde-mour@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/23 19:48:08 by rde-mour          #+#    #+#              #
-#    Updated: 2024/06/01 17:12:49 by rde-mour         ###   ########.org.br    #
+#    Updated: 2024/06/01 21:26:42 by rde-mour         ###   ########.org.br    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,7 +32,7 @@ OBJS				= $(FILES:%.c=$(OBJDIR)/%.o)
 INCLUDES			= -I ./include
 
 COMPILER			= cc
-CFLAGS				= -Wall -Wextra -Werror -pthread -g3
+CFLAGS				= -Wall -Wextra -Werror -pthread -O3 -g3
 
 all: 				$(NAME)
 
