--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: rde-mour <rde-mour@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/23 19:48:08 by rde-mour          #+#    #+#              #
-#    Updated: 2024/06/16 22:51:12 by rde-mour         ###   ########.org.br    #
+#    Updated: 2024/06/17 18:32:03 by rde-mour         ###   ########.org.br    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -43,7 +43,7 @@ OBJS				= $(FILES:%.c=$(OBJDIR)/%.o)
 INCLUDES			:= -I ./include
 
 COMPILER			= cc
-CFLAGS				= -Wall -Wextra -Werror -pthread -O3 -g3
+CFLAGS				= -Wall -Wextra -Werror -pthread
 
 all: 				$(NAME)
 
